# jordandm-online-portfolio-public

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Justfile  Makefile  README.md  pyproject.toml
k8s/: Dockerfile  deployment.yaml
resources/career/: certifications.json  professional_summary.json
src/: main.py
src/tools/: __init__.py  hello_world.py  hellow_world.py
src/website/chatbot/: views.py
src/website/main/: urls.py
src/website/main/static/main/assets/css/: chat.css
src/website/main/templates/main/: chatbot.html  index.html
src/website/mcp/: main.py
src/website/mcp_server/: server.py
src/website/mcp_server/resources/career/: certifications.json  projects.json  skills.json  work_experience.json
src/website/mcp_server/tools/: __init__.py  career_tools.py  hello_world.py
src/website/website/: asgi.py  settings.py  urls.py
tests/: test_endpoints.py
