[project]
name = "characters_mcp"
version = "0.1.0"
description = "Talk to you favorite characters!"
dependencies = [
    "mcp[cli]>=1.2.0", 
    "uvicorn",
    "fastapi",
    "httpx-sse",
    "pydantic>=2.0.0",
    "rich",
    "typer",
    "requests",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[project.optional-dependencies]
test= [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]